--- a/angular_frontend/package.json
+++ b/angular_frontend/package.json
@@ -23,7 +23,13 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "ajv": "^6.0.0",
+    "bootstrap": "^4.1.3",
     "core-js": "^2.4.1",
+    "font-awesome": "^4.7.0",
+    "hoek": "^5.0.3",
+    "jquery": "^3.3.1",
+    "popper.js": "^1.14.4",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
@@ -37,7 +43,7 @@
     "codelyzer": "^4.0.1",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~2.0.0",
+    "karma": "~3.0.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "^1.2.1",
     "karma-jasmine": "~1.1.0",
